--- a/app/src/main/res/layout/activity_facilities.xml
+++ b/app/src/main/res/layout/activity_facilities.xml
@@ -9,10 +9,10 @@
 
     <!--    Begin replaceable fragment content    -->
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/admin_fragment_container"
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".AdminActivity">
+        tools:context=".FacilitiesActivity">
 
         <TextView
             android:id="@+id/facilitiesTitle"
