--- a/app/src/main/res/layout/fragment_badminton.xml
+++ b/app/src/main/res/layout/fragment_badminton.xml
@@ -14,4 +14,12 @@
         android:text="@string/hello_blank_fragment"
     />
 
+    <TextView
+        android:id="@+id/facilityAddress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="24dp"
+        android:text="@string/hello_blank_fragment"
+        app:layout_constraintTop_toBottomOf="@id/facilityTitle" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
