--- a/app/src/main/res/layout/fragment_facility.xml
+++ b/app/src/main/res/layout/fragment_facility.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient3"
-    tools:context=".BadmintonFragment">
+    tools:context=".FacilityFragment">
 
     <TextView
         android:id="@+id/facilityTitle"
