--- a/app/src/main/res/layout/fragment_facility.xml
+++ b/app/src/main/res/layout/fragment_facility.xml
@@ -32,15 +32,24 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/image_gallery"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/my_toolbar" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/input_field_rounded_corner"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/my_toolbar">
+        app:layout_constraintTop_toBottomOf="@id/image_gallery">
 
         <TableLayout
             android:layout_width="match_parent"
