--- a/app/src/main/res/layout/fragment_facility.xml
+++ b/app/src/main/res/layout/fragment_facility.xml
@@ -21,7 +21,7 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <TextView
-            android:id="@+id/facilityTitle"
+            android:id="@+id/fragmentTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Fragment title"
@@ -106,17 +106,6 @@
                 android:textColor="@color/magenta"
                 app:layout_constraintTop_toBottomOf="@id/facilityMaxPax" />
 
-            <TextView
-                android:id="@+id/facilityBooking"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:drawableStart="@drawable/ic_calendar"
-                android:drawableLeft="@drawable/ic_calendar"
-                android:drawablePadding="5dip"
-                android:text="@string/hello_blank_fragment"
-                android:textColor="@color/magenta"
-                app:layout_constraintTop_toBottomOf="@id/facilityMaxPax" />
         </TableLayout>
     </ScrollView>
 
