--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -255,6 +255,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/transparent"
+                        android:clickable="false"
+                        android:editable="false"
+                        android:focusable="false"
                         android:fontFamily="@font/kollektif"
                         android:hint="@string/student_id"
                         android:inputType="text"
@@ -273,10 +276,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 android:orientation="horizontal"
-                android:layout_span="2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
 
@@ -295,6 +295,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/transparent"
+                        android:editable="false"
+                        android:focusable="false"
+                        android:clickable="false"
                         android:fontFamily="@font/kollektif"
                         android:hint="@string/venue"
                         android:inputType="text"
@@ -303,15 +306,15 @@
                         android:textSize="14sp" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
-        </TableRow>
-        <TableRow android:layout_width="0dp">
             <LinearLayout
                 android:id="@+id/date"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
@@ -331,6 +334,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/transparent"
+                        android:editable="false"
+                        android:focusable="false"
+                        android:clickable="false"
                         android:fontFamily="@font/kollektif"
                         android:hint="@string/date"
                         android:inputType="text"
@@ -339,42 +345,48 @@
                         android:textSize="14sp" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
-            <LinearLayout
-                android:id="@+id/time"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+        </TableRow>
+        <TableRow android:layout_width="0dp">
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/time_ti"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/input_field_rounded_corner"
-                    app:boxBackgroundMode="filled"
-                    app:boxStrokeWidth="0dp"
-                    app:boxStrokeWidthFocused="0dp">
+<!--            <LinearLayout-->
+<!--                android:id="@+id/time"-->
+<!--                android:layout_width="fill_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                android:layout_marginLeft="10dp"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:layout_marginEnd="20dp"-->
+<!--                android:layout_marginRight="20dp"-->
+<!--                android:orientation="horizontal"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent">-->
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_time"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/transparent"
-                        android:fontFamily="@font/kollektif"
-                        android:hint="@string/time"
-                        android:inputType="text"
-                        android:paddingTop="17dp"
-                        android:paddingBottom="5dp"
-                        android:textSize="14sp" />
-                </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
+<!--                <com.google.android.material.textfield.TextInputLayout-->
+<!--                    android:id="@+id/time_ti"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:background="@drawable/input_field_rounded_corner"-->
+<!--                    app:boxBackgroundMode="filled"-->
+<!--                    app:boxStrokeWidth="0dp"-->
+<!--                    app:boxStrokeWidthFocused="0dp">-->
+
+<!--                    <com.google.android.material.textfield.TextInputEditText-->
+<!--                        android:id="@+id/et_time"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:background="@color/transparent"-->
+<!--                        android:editable="false"-->
+<!--                        android:focusable="false"-->
+<!--                        android:clickable="false"-->
+<!--                        android:fontFamily="@font/kollektif"-->
+<!--                        android:hint="@string/time"-->
+<!--                        android:inputType="text"-->
+<!--                        android:paddingTop="17dp"-->
+<!--                        android:paddingBottom="5dp"-->
+<!--                        android:textSize="14sp" />-->
+<!--                </com.google.android.material.textfield.TextInputLayout>-->
+<!--            </LinearLayout>-->
         </TableRow>
         <TableRow android:layout_width="0dp">
             <LinearLayout
@@ -417,7 +429,7 @@
         </TableRow>
         <TableRow android:layout_width="0dp">
             <Button
-                android:id="@+id/btnAddService"
+                android:id="@+id/btnBookNow"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
