--- a/app/src/main/res/layout/booking_ticket.xml
+++ b/app/src/main/res/layout/booking_ticket.xml
@@ -53,30 +53,59 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:drawableStart="@drawable/ic_location_dark"
+                    android:drawableLeft="@drawable/ic_location_dark"
+                    android:drawablePadding="3dp"
                     android:fontFamily="@font/kollektif"
                     android:text="Addr"
                     android:textAppearance="?attr/textAppearanceBody2"
-                    android:textColor="?android:attr/textColorSecondary" />
+                    android:textColor="?android:attr/textColorSecondary"
+                    app:drawableLeftCompat="@drawable/ic_location_dark"
+                    app:drawableStartCompat="@drawable/ic_location_dark" />
+
+                <TextView
+                    android:id="@+id/tvDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:drawableStart="@drawable/ic_calendar_dark"
+                    android:drawableLeft="@drawable/ic_calendar_dark"
+                    android:drawablePadding="3dp"
+                    android:fontFamily="@font/kollektif"
+                    android:text="Date"
+                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textColor="?android:attr/textColorSecondary"
+                    app:drawableLeftCompat="@drawable/ic_calendar_dark"
+                    app:drawableStartCompat="@drawable/ic_calendar_dark" />
 
                 <TextView
                     android:id="@+id/tvTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:drawableStart="@drawable/ic_time_dark"
+                    android:drawableLeft="@drawable/ic_time_dark"
+                    android:drawablePadding="3dp"
                     android:fontFamily="@font/kollektif"
                     android:text="Time"
                     android:textAppearance="?attr/textAppearanceBody2"
-                    android:textColor="?android:attr/textColorSecondary" />
+                    android:textColor="?android:attr/textColorSecondary"
+                    app:drawableStartCompat="@drawable/ic_time_dark" />
 
                 <TextView
                     android:id="@+id/tvPax"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:drawableStart="@drawable/ic_pax_dark"
+                    android:drawableLeft="@drawable/ic_pax_dark"
+                    android:drawablePadding="3dp"
                     android:fontFamily="@font/kollektif"
                     android:text="Pax"
                     android:textAppearance="?attr/textAppearanceBody2"
-                    android:textColor="?android:attr/textColorSecondary" />
+                    android:textColor="?android:attr/textColorSecondary"
+                    app:drawableLeftCompat="@drawable/ic_pax_dark"
+                    app:drawableStartCompat="@drawable/ic_pax_dark" />
 
             </LinearLayout>
 
